# wasi-reactor-gc-counterexample

./: .gitignore  README.md  index.js  lib.c  package.json  wasi-reactor-gc-counterexample.cabal  wasi-reactor-gc-counterexample.hs  webpack.config.js
dist-newstyle/: index.bundle.js  index.html
